kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foo
  name: foo  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      # Do not change the image manually. The pipeline will change this using Kustomize
      - image: foo@sha256:your-image-digest
        imagePullPolicy: Always
        name: foo
        resources:
          limits:
            memory: 768Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 11

      imagePullSecrets:
        - name: artifact-registry
